updated code, incorrect

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   <body>
 
     <h1>Athletes</h1>
-    <section>
+      <section data-athlete="NM372"></section>
+      <section data-athlete="SV782"></section>
+
+    <!-- <section>
       <h2 id="NM372">NM372</h2>
         <dl id="athlete-info"></dl>
       <h2 id="SV782">SV782</h2>
         <dl id="athlete-info"></dl>
-    </section>
+    </section> -->
 
   </body>
 </html>
